# ocor-mouse

./: .clang-format  .gitignore  Makefile  README.md  cliff.toml  west.yml
.github/workflows/: nightly.yml  pr.yml  promote-release.yml  release.yml
applications/gaming_mouse/: .gitignore  CMakeLists.txt  Kconfig  Kconfig.debug  Kconfig.hid
docs/QA/: checklist-template.md
docs/requirements/: REQ-BUTTON-001.md  REQ-DFU-001.md  REQ-DFU-002.md  REQ-DPI-001.md  REQ-DPI-002.md  REQ-DPI-003.md  REQ-POWER-001.md  REQ-RADIO-001.md  REQ-USB-001.md  (+3 more)
dongle-hs-ch32v305/: Makefile  README.md  openocd.cfg
host-tool/: README.md
keys/: README.md  mcuboot.dev.pem  mcuboot.dev.pub.pem
modules/paw3395/zephyr/: CMakeLists.txt  Kconfig  module.yml
tools/: manifest.py
tools/reqtool/: README.md  pyproject.toml
tools/reqtool/reqtool/: __main__.py  checklist.py  cli.py  diff.py  lint.py  orphans.py  render.py  report.py  schema.py  trace.py
tools/reqtool/tests/: test_checklist.py  test_diff.py  test_lint.py  test_orphans.py  test_report.py  test_schema.py  test_trace.py
tools/reqtool/tests/fixtures/bad_reqs/: REQ-BAD-001.md
tools/reqtool/tests/fixtures/dup_reqs/: REQ-DUP-001.md
tools/reqtool/tests/fixtures/sample_repo/docs/requirements/: REQ-BTN-001.md  REQ-DPI-001.md  REQ-RGB-001.md
tools/reqtool/tests/fixtures/sample_repo/src/: dangling.c  dpi.c
tools/reqtool/tests/fixtures/sample_repo/tests/: test_dpi.c
tools/reqtool/tests/fixtures/valid_reqs/: REQ-DPI-001.md
web-config/: build.mjs  index.html  layout_webhid.html  package.json  preview_shaver.html  shaver.html
(+188 files in other folders)
